src/objects/Ixaris_Refund__c.object
<CustomObject>
    <fields>
        <fullName>Acquirer_Reference_Number__c</fullName>
        <label>Acquirer Reference Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AdjustmentID__c</fullName>
        <label>AdjustmentID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AuthCode__c</fullName>
        <label>AuthCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Balance_Adjustment__c</fullName>
        <label>Balance Adjustment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Balance_After__c</fullName>
        <label>Balance After</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Balance_Before__c</fullName>
        <label>Balance Before</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CardNum__c</fullName>
        <label>Card Num</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Card_Factory_Name__c</fullName>
        <label>Card Factory Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Card_Scheme__c</fullName>
        <label>Card Scheme</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <label>Client</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Community__c</fullName>
        <label>Community</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Destination_Details__c</fullName>
        <label>Destination Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Destination_Type__c</fullName>
        <label>Destination Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direction__c</fullName>
        <label>Direction</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exchange_Rate__c</fullName>
        <label>Exchange Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExternalID__c</fullName>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExternalRef__c</fullName>
        <label>External Ref</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Forex_Fee__c</fullName>
        <label>Forex Fee</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Forex_Flag__c</fullName>
        <label>Forex Flag</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Merchant_Category_Code__c</fullName>
        <label>Merchant Category Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Merchant_Country__c</fullName>
        <label>Merchant Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Merchant_Name__c</fullName>
        <label>Merchant Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Non_Forex_Fee__c</fullName>
        <label>Non Forex Fee</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Original_Amount__c</fullName>
        <label>Original Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Original_Currency__c</fullName>
        <label>Original Currency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Participant_Amount__c</fullName>
        <label>Participant Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Participant_Currency__c</fullName>
        <label>Participant Currency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Participant_Details__c</fullName>
        <label>Participant Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Participant_Sink__c</fullName>
        <label>Participant Sink</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Participant_Type__c</fullName>
        <label>Participant Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scenario_Cases__c</fullName>
        <label>Scenario Cases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Single_Cases__c</fullName>
        <label>Single Cases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Source_Details__c</fullName>
        <label>Source Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Type__c</fullName>
        <label>Source Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TransactionID__c</fullName>
        <label>TransactionID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Amount__c</fullName>
        <label>Transaction Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transaction_Currency__c</fullName>
        <label>Transaction Currency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Info__c</fullName>
        <label>Transaction Info</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Type__c</fullName>
        <label>Transaction Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Ixaris Refund</label>
    <nameField>
        <displayFormat>IXA-{00000}</displayFormat>
        <label>Ixaris Refund Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ixaris Refunds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>